# 6502_c_emulator

./: .gitignore  6502.c  6502v2.cpp  6502v2.h  CMakeLists.txt  addr_modes.cpp  assemble.py  impl_inst.cpp  impl_inst.h  instructions.cpp  wosmon.asm
helper_script/: generate_instructions_cpp.py  instruction_info  instruction_info_fixed  instructions1.cpp
